--- a/whisk_tutorial/templates/tutorial/snippet.html
+++ b/whisk_tutorial/templates/tutorial/snippet.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/jquery.terminal/0.10.12/jquery.terminal.css" >
+<link rel="stylesheet" href="{% static 'css/jquery.terminal.css' %}" />
 <link rel="stylesheet" href="{% static 'css/tutorial_style.css' %}" />
 
 
@@ -109,11 +109,11 @@
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/jquery/1.7.1/jquery.js" ></script>
-<script src="https://cdn.jsdelivr.net/mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/0.10.12/js/jquery.terminal.js"></script>
-<script src="https://cdn.jsdelivr.net/sugar/1.3.9/sugar.min.js"></script>
-<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+<script src="{% static 'js/jquery1.7.1.min.js' %}" ></script>
+<script src="{% static 'js/jquery.mousewheel.min.js' %}"></script>
+<script src="{% static 'js/jquery.terminal.js' %}"></script>
+<script src="{% static 'js/sugar.min.js' %}"></script>
+<script src="{% static 'js/jquery-ui.min.js' %}"></script>
 <script src="{% static 'js/terminal.js' %}"></script>
 <script src="{% static 'js/steps.js' %}"></script>
 
